# spectrum

./: .travis.yml  README.rst  setup.cfg
docs/: index.rst  rtd-pip-requirements
docs/spectrum/: index.rst
licenses/: LICENSE.rst
spectrum/: __init__.py  coadd.py  conftest.py  spectrum.py
spectrum/tests/: test_spectrum.py
