[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build

[ah_bootstrap]
auto_use = True

[metadata]
package_name = spectrum
description = Astropy affiliated package to do things with spectra
long_description = This is a package for doing things with spectra. Contrary to specutils, it is spectra class is basted on astropy.table.Table. Thus, it is easy to provide more functionality (merging, slicing, coadding spectra) at the expense of not treating a WCS in a functional form. Spectra in this package are tables where the dispersion is just one of several table columns.
author = Moritz Guenther
author_email = moritz.guenther@gmx.de
license = BSD
url = http://astropy.org/
edit_on_github = False
github_project = hamogu/spectrum
